[project]
name = "pyinfra-windows"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyinfra",
]

[tool.uv.sources]
pyinfra = { path = "../pyinfra" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[project.entry-points."pyinfra.connectors"]
winrm = "pyinfra_windows.connectors.winrm:WinRMConnector"
