[project]
name = "pyinfra-windows"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyinfra>3.5", # 3.5.1 introduces packaging support for winget
    "pywinrm>=0.5"
]

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyinfra_windows"]

[project.entry-points."pyinfra.connectors"]
winrm = "pyinfra_windows.connectors.winrm:WinRMConnector"
